force-app/main/default/objects/car__c/car__c.object-meta.xml
<CustomObject>
    <label>car</label>
    <nameField>
        <label>car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>