force-app/main/default/objects/car__c/fields/Daily_Rate_EGP__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate_EGP__c</fullName>
    <label>Daily Rate (EGP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>