force-app/main/default/objects/car__c/fields/Image_UR__c.field-meta.xml
<CustomField>
    <fullName>Image_UR__c</fullName>
    <label>Image UR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>